# Fast-Loop

./: README.md  __init__.py
addon/: HotkeyPrefs.JSON  __init__.py  split_edge_loop_before_cleanup_3_19_22.py
addon/keymaps/: __init__.py  event_handler.py  keymap.py  modal_keymapping.py
addon/ops/: __init__.py  edge_constraint.py  edge_data.py  edge_ring.py  edge_slide.py  fast_loop.py  fast_loop_actions.py  fast_loop_algorithms.py  fast_loop_classic.py  fast_loop_common.py  fast_loop_helpers.py  internal.py  loop_slice.py  multi_object_edit.py
addon/ops/actions/: activate_edge_slide.py  remove_loop.py  (+5 more)
addon/props/: __init__.py  addon.py  fl_properties.py  prefs.py
addon/shaders/: ds_arrow_3d_fs.glsl  icon_minimize_fs.glsl  icon_test_fs.glsl  icon_vs.glsl  image_3d_fs.glsl  plane_3d_vs.glsl
addon/snapping/: snap_math.py  snap_points.py  snapping.py  snapping_utils.py
addon/tools/: __init__.py  fast_loop.py  fast_loop_classic.py
addon/ui/: __init__.py  panels.py  pies.py  ui.py  widgets.py
addon/utils/: __init__.py  common.py  draw_2d.py  draw_3d.py  drawing.py  edge_slide.py  math.py  mesh.py  observer.py  ops.py  raycast.py  safety.py  serialization.py  shaders.py  ui.py
bl_ui_widgets/: __init__.py  bl_ui_button.py  bl_ui_checkbox.py  bl_ui_slider.py  bl_ui_up_down.py  bl_ui_widget.py  drag_panel_op.py
signalslot/: .coveragerc  .travis.yml  MANIFEST.in  README.rst  setup.cfg  setup.py  test_requirements.txt  tox.ini
signalslot/docs/: Makefile  conf.py  index.rst  make.bat  pattern.rst  usage.rst
signalslot/signalslot/: __init__.py  signal.py
(+3 files in other folders)
