[nosetests]
verbosity=3
with-doctest=1
detailed-errors=1
with-coverage=1
cover-html=1
cover-tests=1
cover-erase=1
cover-html-dir=build

[tool:pytest]
addopts = --pep8 --cov signalslot --cov-report html --doctest-modules
python_files = signalslot/*.py
norecursedirs = .git docs .tox
looponfailroots = signalslot
pep8ignore =
    */tests.py ALL

[metadata]
description-file = README.rst
